membuat file index.html

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 
     <ul>
 
-        <li>Ilham Azis : XIRPL2 - 19</li>
+        <li>Chamelia Christine : XIRPLC - 10</li>
 
-        <li>Adam Braham : XIRPL2 - 07</li>
+        <liIsnaini Zulfa : XIRPLC - 17</li>
 
-        <li>Fanny Eka : XIRPL2 - 11</li>
+        <li>Fijriati Rahmatur Rizqi : XIRPLC - 15</li>
 
     </ul>
 
