--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 
     <ul>
 
-        <li>Ilham Azis : XIRPL2 - 19</li>
+        <li>Chamelia Christine : XIRPLC - 10</li>
 
-        <li>Adam Braham : XIRPL2 - 07</li>
+        <li>Althea Grishelda : XIRPLC - 06</li>
 
-        <li>Fanny Eka : XIRPL2 - 11</li>
+        <li>Tanti Mawar : XIRPLC - 33</li>
 
     </ul>
 
